templates/yaml/nextcloud/nextcloud/next-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud 
  namespace: nextsync
  labels:
    app: nextcloud 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud 
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      volumes:
      - name: nextcloud-storage
        persistentVolumeClaim: 
          claimName: nextcloud-pvc
      - name: nextsync
        persistentVolumeClaim: 
          claimName: syncthing-pvc
      containers:
        - image: nextcloud:apache
          name: nextsync
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /var/www/html
              name: nextcloud-storage
            - mountPath: /mnt/sync
              name: nextsync
