templates/yaml/nextcloud/nextcloud/next-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud 
  namespace: nextsync
  labels:
    app: nextcloud
spec:
  ports:
    - port: 80
  selector:
    app: nextcloud
