templates/yaml/nextcloud/nextcloud/next-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nextcloud
  namespace: nextsync
  annotations:
    kubernetes.io/ingress.class: "nginx" 
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - next.cuak.es
    secretName: next-tls
  rules:
  - host: next.cuak.es
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
             name: nextcloud
             port:
                number: 80
